--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2383,7 +2383,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "23c83cb8",
+   "id": "a950b6b2",
    "metadata": {},
    "source": [
     "# Casting array eleemt from one type other data type \n",
@@ -2422,19 +2422,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "id": "7e72fcc3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (2,) + inhomogeneous part.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [84], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#  slicing of an numpy array in interations \u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# 2d  array \u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m arr \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m np\u001b[38;5;241m.\u001b[39mnditer(arr[\u001b[38;5;241m0\u001b[39m:,\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m3\u001b[39m:\u001b[38;5;241m2\u001b[39m]):\u001b[38;5;66;03m# [array location , index number]\u001b[39;00m\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(x)\n",
-      "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (2,) + inhomogeneous part."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n"
      ]
     }
    ],
@@ -2442,7 +2441,7 @@
     "#  slicing of an numpy array in interations \n",
     "# 2d  array \n",
     "\n",
-    "arr = np.array([[1,2,3],[5,6,7,8]])\n",
+    "arr = np.array([[1,2,3,4],[5,6,7,8]])\n",
     "\n",
     "for x in np.nditer(arr[0:,0:3:2]):# [array location , index number]\n",
     "    print(x)"
@@ -2450,35 +2449,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "4e05418e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3d array\n",
+    "# array [start:end:step , start:end:step, start:end :step]\n",
+    "\n",
+    "arr = np.array([[[1,2,3],[11,22,33]],[[4,5,6],[44,55,66]]])\n",
+    "for i in np.nditer(arr[1:,1:,1:2]):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "b4260f5c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_3d = np.array([\n",
+    "    [[1,2,3],[4,5,6]],\n",
+    "    [[7,8,9],[10,11,12]]\n",
+    "])\n",
+    "\n",
+    "# slice the array along the sirst dimention \n",
+    "for i in np.nditer(array_3d[:,:,:]):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "46275c89",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "7\n",
+      "9\n",
+      "10\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_3d = np .array([\n",
+    "    [[1,2,3],[4,5,6]],\n",
+    "    [[7,8,9],[10,11,12]]\n",
+    "])\n",
+    "\n",
+    "# slice the array with a step size of 2 along thee first dimention\n",
+    "for i in np.nditer(array_3d[:,::,::2]):\n",
+    "    print(i)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0c79bcd",
+   "cell_type": "markdown",
+   "id": "476ef50e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 2.using ndenumerate()"
+   ]
   },
   {
    "cell_type": "code",
