--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2383,7 +2383,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "a950b6b2",
+   "id": "b7e26f9a",
    "metadata": {},
    "source": [
     "# Casting array eleemt from one type other data type \n",
@@ -2540,40 +2540,130 @@
   },
   {
    "cell_type": "markdown",
-   "id": "476ef50e",
+   "id": "d153ba75",
    "metadata": {},
    "source": [
     "### 2.using ndenumerate()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d9ac6ab3",
+   "cell_type": "markdown",
+   "id": "426cfe6f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "enumeration means mentioing sequence number of something one by one \n",
+    "\n",
+    "Whenever we want to acess any location of element in multi dimentional arrays that time we can use \"\"ndenumerate\"\n",
+    "\n",
+    "this method always return tuple of index and element"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "ca6226a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((0,), 1)\n",
+      "((1,), 2)\n",
+      "((2,), 3)\n",
+      "****************************************************************************************************\n",
+      "index :,  (0,) value 1\n",
+      "index :,  (1,) value 2\n",
+      "index :,  (2,) value 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1,2,3])\n",
+    "\n",
+    "for x in np.ndenumerate(arr):\n",
+    "    print(x)\n",
+    "    \n",
+    "print('*'*100)\n",
+    "\n",
+    "for i,x in np.ndenumerate(arr):\n",
+    "    print(\"index :, \",i,\"value\",x)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "2ba1dcb5",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3 4]\n",
+      " [5 6 7 8]]\n",
+      "Index : (0, 0) value 1\n",
+      "Index : (0, 1) value 2\n",
+      "Index : (0, 2) value 3\n",
+      "Index : (0, 3) value 4\n",
+      "Index : (1, 0) value 5\n",
+      "Index : (1, 1) value 6\n",
+      "Index : (1, 2) value 7\n",
+      "Index : (1, 3) value 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2D array\n",
+    "arr = np.array ([[1,2,3,4],[5,6,7,8]])\n",
+    "\n",
+    "print(arr)\n",
+    "\n",
+    "for i,val in np.ndenumerate(arr):\n",
+    "    print(\"Index :\",i,\"value\",val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efd3d782",
+   "metadata": {},
+   "source": [
+    "## joining Array\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "187a5acc",
+   "metadata": {},
+   "source": [
+    "##### while joining array we should remember \"both arrays should have same dimention\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "415074b3",
+   "metadata": {},
+   "source": [
+    "#### using concatenation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "f402482d",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arr1=np.array([1,2,3])\n",
+    "arr2=np.array([4,5,6])\n",
+    "\n",
+    "arr=np.concatenate((arr1,arr2))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d41a18e",
+   "id": "5fbf55b1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2581,7 +2671,271 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bfc24f7",
+   "id": "3175dc09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44af7149",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d33e434",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e0a08c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84691444",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56b757c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae27a0df",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a76327ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a9b0270",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5293a652",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88715f3e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d0968c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c1db9e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49850798",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1828176a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a3b2b37",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95970941",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19cf5223",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac988920",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a5e851f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23a6b5e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76c4a562",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7981276",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "518ba5da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c92fb2b2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ebd4f39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7e23fd8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c4ef4ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61a1c1e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2a59316",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64f9f227",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "865614f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94eee21e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90914e73",
    "metadata": {},
    "outputs": [],
    "source": []
