--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2383,7 +2383,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "b7e26f9a",
+   "id": "51dbf072",
    "metadata": {},
    "source": [
     "# Casting array eleemt from one type other data type \n",
@@ -2540,7 +2540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d153ba75",
+   "id": "1662cb4e",
    "metadata": {},
    "source": [
     "### 2.using ndenumerate()"
@@ -2548,7 +2548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "426cfe6f",
+   "id": "f57ae53a",
    "metadata": {},
    "source": [
     "enumeration means mentioing sequence number of something one by one \n",
@@ -2625,7 +2625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efd3d782",
+   "id": "5085ad4b",
    "metadata": {},
    "source": [
     "## joining Array\n"
@@ -2633,7 +2633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "187a5acc",
+   "id": "39dda717",
    "metadata": {},
    "source": [
     "##### while joining array we should remember \"both arrays should have same dimention\""
@@ -2641,7 +2641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "415074b3",
+   "id": "d6bfae88",
    "metadata": {},
    "source": [
     "#### using concatenation"
@@ -2649,21 +2649,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "f402482d",
+   "execution_count": 95,
+   "id": "19c9fe88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
    "source": [
     "arr1=np.array([1,2,3])\n",
     "arr2=np.array([4,5,6])\n",
     "\n",
-    "arr=np.concatenate((arr1,arr2))"
+    "arr=np.concatenate((arr1,arr2))\n",
+    "print(arr)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fbf55b1",
+   "id": "887902cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# array concatenate using axis option \n",
+    "\n",
+    "#axis =0 : it represents rows (defaults)\n",
+    "# axis = 1 : it represent colomns\n",
+    "\n",
+    "arr1 = np.array([[1,2],[3,4]])\n",
+    "arr2 = np.array([[5,6],[7,8]])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1815868e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2671,7 +2698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3175dc09",
+   "id": "cf7d7ae7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2679,7 +2706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44af7149",
+   "id": "95ab46ff",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2687,7 +2714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d33e434",
+   "id": "76a6efba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2695,7 +2722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e0a08c4",
+   "id": "5e6acbc4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2703,7 +2730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84691444",
+   "id": "734e8364",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2711,7 +2738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56b757c5",
+   "id": "ac8a7ed1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2719,7 +2746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae27a0df",
+   "id": "d4a40930",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2727,7 +2754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a76327ba",
+   "id": "b99de420",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2735,7 +2762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a9b0270",
+   "id": "40db7b46",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2743,7 +2770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5293a652",
+   "id": "448301a4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2751,7 +2778,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88715f3e",
+   "id": "b82027d7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2759,7 +2786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d0968c5",
+   "id": "0b6cc293",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2767,7 +2794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c1db9e2",
+   "id": "db217d7c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2775,7 +2802,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49850798",
+   "id": "3c87ff27",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2783,7 +2810,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1828176a",
+   "id": "80b3b97c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2791,7 +2818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a3b2b37",
+   "id": "c7fce81e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2799,7 +2826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95970941",
+   "id": "a35e370c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2807,7 +2834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19cf5223",
+   "id": "ecd4bbd6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2815,7 +2842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac988920",
+   "id": "7ed250ba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2823,7 +2850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a5e851f",
+   "id": "71155c61",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2831,7 +2858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23a6b5e9",
+   "id": "ee606261",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2839,7 +2866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76c4a562",
+   "id": "bdd4d619",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2847,7 +2874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7981276",
+   "id": "d11936e0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2855,7 +2882,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "518ba5da",
+   "id": "aa78525e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2863,7 +2890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c92fb2b2",
+   "id": "90c20f8b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2871,7 +2898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ebd4f39",
+   "id": "3f9422bb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2879,7 +2906,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7e23fd8",
+   "id": "0f2e7c40",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2887,7 +2914,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c4ef4ab",
+   "id": "c667cdfc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2895,7 +2922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61a1c1e6",
+   "id": "75f05e53",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2903,7 +2930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2a59316",
+   "id": "42c1e526",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2911,7 +2938,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64f9f227",
+   "id": "73dfb36b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2919,7 +2946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "865614f7",
+   "id": "2dff76f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2927,15 +2954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94eee21e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90914e73",
+   "id": "abea009c",
    "metadata": {},
    "outputs": [],
    "source": []
