--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2383,7 +2383,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "51dbf072",
+   "id": "186f6bb9",
    "metadata": {},
    "source": [
     "# Casting array eleemt from one type other data type \n",
@@ -2540,7 +2540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1662cb4e",
+   "id": "2059165d",
    "metadata": {},
    "source": [
     "### 2.using ndenumerate()"
@@ -2548,7 +2548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f57ae53a",
+   "id": "56568c54",
    "metadata": {},
    "source": [
     "enumeration means mentioing sequence number of something one by one \n",
@@ -2625,7 +2625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5085ad4b",
+   "id": "9db56b4d",
    "metadata": {},
    "source": [
     "## joining Array\n"
@@ -2633,7 +2633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39dda717",
+   "id": "f39dfb4e",
    "metadata": {},
    "source": [
     "##### while joining array we should remember \"both arrays should have same dimention\""
@@ -2641,7 +2641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6bfae88",
+   "id": "77177c9d",
    "metadata": {},
    "source": [
     "#### using concatenation"
@@ -2650,7 +2650,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "19c9fe88",
+   "id": "9391d791",
    "metadata": {},
    "outputs": [
     {
@@ -2671,10 +2671,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "887902cb",
+   "execution_count": 98,
+   "id": "e0ad4ff7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]\n",
+      " [7 8]]\n",
+      "****************************************************************************************************\n",
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]\n",
+      " [7 8]]\n"
+     ]
+    }
+   ],
    "source": [
     "# array concatenate using axis option \n",
     "\n",
@@ -2684,13 +2700,212 @@
     "arr1 = np.array([[1,2],[3,4]])\n",
     "arr2 = np.array([[5,6],[7,8]])\n",
     "\n",
-    "\n"
+    "\n",
+    "arr = np.concatenate ((arr1,arr2),axis=0)# columnwise\n",
+    "print(arr)\n",
+    "\n",
+    "print(\"*\"*100)\n",
+    "\n",
+    "\n",
+    "arr = np.concatenate((arr1,arr2),axis=0)# rowwise\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58343bf7",
+   "metadata": {},
+   "source": [
+    "### 2.using stack fuction \n",
+    "\n",
+    "stackin is same as concatenating , the only differance is that stacking is done along a new axis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "88a553a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 4]\n",
+      " [2 5]\n",
+      " [3 6]]\n",
+      "****************************************************************************************************\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1 = np.array([1,2,3])\n",
+    "arr2 = np.array([4,5,6])\n",
+    "\n",
+    "arr  = np.stack((arr1,arr2),axis=1)\n",
+    "print(arr)\n",
+    "\n",
+    "print('*'*100)\n",
+    "\n",
+    "arr=np.stack((arr1,arr2),axis=0)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb5b4375",
+   "metadata": {},
+   "source": [
+    "#### 2.1 using \"vstack function(\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "884882d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1=np.array([1,2,3])\n",
+    "arr2=np.array([4,5,6])\n",
+    "\n",
+    "arr = np.vstack((arr1,arr2))\n",
+    "\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "207e946d",
+   "metadata": {},
+   "source": [
+    "#### 2.3 using \"dstack fuction()\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "52fb2320",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 4]\n",
+      "  [2 5]\n",
+      "  [3 6]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1 = np.array([1,2,3])\n",
+    "arr2 = np.array([4,5,6])\n",
+    "\n",
+    "arr = np.dstack((arr1,arr2))\n",
+    "\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "3bf76ab2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  4]\n",
+      "  [ 2  5]\n",
+      "  [ 3  6]]\n",
+      "\n",
+      " [[11 44]\n",
+      "  [22 55]\n",
+      "  [33 66]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1 = np.array([[1,2,3],[11,22,33]])\n",
+    "\n",
+    "arr2 = np.array([[4,5,6],[44,55,66]])\n",
+    "\n",
+    "arr = np.dstack((arr1,arr2))\n",
+    "\n",
+    "# it stand for \"depth wise stack\" and is used stack arrays\n",
+    "\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a1a07e7",
+   "metadata": {},
+   "source": [
+    "### Spliting Array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d16e1c5f",
+   "metadata": {},
+   "source": [
+    "##### joining meres multiple arrays into ne and spltting\n",
+    "breaks one array into multiple \n",
+    "\n",
+    "syntax:\n",
+    "    \n",
+    "np.arrays_split(array,no_split)\n",
+    "np.split (array,no.split)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "2b418a20",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'array' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [109], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m arr \u001b[38;5;241m=\u001b[39m \u001b[43marray\u001b[49m([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m])\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(arr)\n\u001b[0;32m      4\u001b[0m newarr \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msplit(arr,\u001b[38;5;241m3\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'array' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "arr = array([1,2,3,4,5,6])\n",
+    "print(arr)\n",
+    "\n",
+    "newarr = np.split(arr,3)\n",
+    "print(newarr)\n",
+    "\n",
+    "print('*'*100)\n",
+    "\n",
+    "for i in ne"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1815868e",
+   "id": "383358f1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2698,7 +2913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf7d7ae7",
+   "id": "fb4a3c08",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2706,7 +2921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95ab46ff",
+   "id": "4c114957",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2714,7 +2929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76a6efba",
+   "id": "7e75f913",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2722,7 +2937,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e6acbc4",
+   "id": "f7c24422",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2730,7 +2945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "734e8364",
+   "id": "6c062b5a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2738,7 +2953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac8a7ed1",
+   "id": "ab36909c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2746,7 +2961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4a40930",
+   "id": "074960ee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2754,7 +2969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b99de420",
+   "id": "37335f4b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2762,7 +2977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40db7b46",
+   "id": "8b6d79c3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2770,7 +2985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "448301a4",
+   "id": "e3459bc8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2778,7 +2993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b82027d7",
+   "id": "2eb3629e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2786,7 +3001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b6cc293",
+   "id": "8038fd6f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2794,7 +3009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db217d7c",
+   "id": "ac18d4f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2802,7 +3017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c87ff27",
+   "id": "14493352",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2810,7 +3025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80b3b97c",
+   "id": "dd05ddf9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2818,7 +3033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7fce81e",
+   "id": "e16ea65d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2826,7 +3041,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a35e370c",
+   "id": "3f5b2ff0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2834,7 +3049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecd4bbd6",
+   "id": "d7c3fe99",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2842,7 +3057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ed250ba",
+   "id": "7cb5d018",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2850,7 +3065,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71155c61",
+   "id": "50c1f0af",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2858,7 +3073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee606261",
+   "id": "5e0707c8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2866,7 +3081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdd4d619",
+   "id": "f7db3612",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2874,87 +3089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d11936e0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa78525e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90c20f8b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f9422bb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f2e7c40",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c667cdfc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "75f05e53",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42c1e526",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73dfb36b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dff76f3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abea009c",
+   "id": "533841cf",
    "metadata": {},
    "outputs": [],
    "source": []
