--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -2383,7 +2383,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "186f6bb9",
+   "id": "2ad25b08",
    "metadata": {},
    "source": [
     "# Casting array eleemt from one type other data type \n",
@@ -2540,7 +2540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2059165d",
+   "id": "882a3e05",
    "metadata": {},
    "source": [
     "### 2.using ndenumerate()"
@@ -2548,7 +2548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56568c54",
+   "id": "fed6cccb",
    "metadata": {},
    "source": [
     "enumeration means mentioing sequence number of something one by one \n",
@@ -2625,7 +2625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9db56b4d",
+   "id": "f5c909a2",
    "metadata": {},
    "source": [
     "## joining Array\n"
@@ -2633,7 +2633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f39dfb4e",
+   "id": "eaa27b45",
    "metadata": {},
    "source": [
     "##### while joining array we should remember \"both arrays should have same dimention\""
@@ -2641,7 +2641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77177c9d",
+   "id": "5708fa7b",
    "metadata": {},
    "source": [
     "#### using concatenation"
@@ -2650,7 +2650,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "9391d791",
+   "id": "6f67382b",
    "metadata": {},
    "outputs": [
     {
@@ -2672,7 +2672,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "e0ad4ff7",
+   "id": "d10aa164",
    "metadata": {},
    "outputs": [
     {
@@ -2713,7 +2713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58343bf7",
+   "id": "d5bec47a",
    "metadata": {},
    "source": [
     "### 2.using stack fuction \n",
@@ -2724,7 +2724,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "88a553a1",
+   "id": "79bcba8f",
    "metadata": {},
    "outputs": [
     {
@@ -2755,7 +2755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb5b4375",
+   "id": "93f90614",
    "metadata": {},
    "source": [
     "#### 2.1 using \"vstack function(\""
@@ -2764,7 +2764,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "884882d5",
+   "id": "a2e2ec96",
    "metadata": {},
    "outputs": [
     {
@@ -2787,7 +2787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "207e946d",
+   "id": "f4250c81",
    "metadata": {},
    "source": [
     "#### 2.3 using \"dstack fuction()\""
@@ -2796,7 +2796,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "52fb2320",
+   "id": "8172452a",
    "metadata": {},
    "outputs": [
     {
@@ -2821,7 +2821,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "3bf76ab2",
+   "id": "cdf87bd1",
    "metadata": {},
    "outputs": [
     {
@@ -2852,7 +2852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a1a07e7",
+   "id": "23f723e0",
    "metadata": {},
    "source": [
     "### Spliting Array"
@@ -2860,7 +2860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d16e1c5f",
+   "id": "6d2a60ad",
    "metadata": {},
    "source": [
     "##### joining meres multiple arrays into ne and spltting\n",
@@ -2874,24 +2874,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "2b418a20",
+   "execution_count": 114,
+   "id": "2f190b07",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'array' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [109], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m arr \u001b[38;5;241m=\u001b[39m \u001b[43marray\u001b[49m([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m])\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(arr)\n\u001b[0;32m      4\u001b[0m newarr \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msplit(arr,\u001b[38;5;241m3\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'array' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n",
+      "[array([1, 2]), array([3, 4]), array([5, 6])]\n",
+      "****************************************************************************************************\n",
+      "[1 2]\n",
+      "[3 4]\n",
+      "[5 6]\n"
      ]
     }
    ],
    "source": [
-    "arr = array([1,2,3,4,5,6])\n",
+    "arr = np.array([1,2,3,4,5,6])\n",
     "print(arr)\n",
     "\n",
     "newarr = np.split(arr,3)\n",
@@ -2899,13 +2900,65 @@
     "\n",
     "print('*'*100)\n",
     "\n",
-    "for i in ne"
+    "for i in newarr:\n",
+    "    print (i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "2743568d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[array([[1],\n",
+      "       [4]]), array([[2],\n",
+      "       [5]]), array([[3],\n",
+      "       [6]])]\n",
+      "****************************************************************************************************\n",
+      "[[1]\n",
+      " [4]]\n",
+      "[[2]\n",
+      " [5]]\n",
+      "[[3]\n",
+      " [6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using axis \n",
+    "\n",
+    "arr = np.array([[1,2,3],\n",
+    "               [4,5,6]])\n",
+    "print(arr)\n",
+    "newarr=np.split(arr,3,axis=1)\n",
+    "print(newarr)\n",
+    "\n",
+    "print('*'*100)\n",
+    "\n",
+    "for i in newarr:\n",
+    "    print(i)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "383358f1",
+   "id": "8881fab8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0edcfab2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2913,7 +2966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb4a3c08",
+   "id": "bf19aefd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2921,7 +2974,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c114957",
+   "id": "562bc844",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2929,7 +2982,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e75f913",
+   "id": "f942a5bf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2937,7 +2990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7c24422",
+   "id": "56f6efd7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2945,7 +2998,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c062b5a",
+   "id": "a73e12da",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2953,7 +3006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab36909c",
+   "id": "f0fdb533",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2961,7 +3014,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "074960ee",
+   "id": "2a28aee2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2969,7 +3022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37335f4b",
+   "id": "8be74336",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2977,7 +3030,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b6d79c3",
+   "id": "4dba092e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2985,7 +3038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3459bc8",
+   "id": "a8116f0f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2993,7 +3046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eb3629e",
+   "id": "d7007f51",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3001,7 +3054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8038fd6f",
+   "id": "7bb36afb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3009,7 +3062,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac18d4f3",
+   "id": "68aab556",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3017,7 +3070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14493352",
+   "id": "80073e5c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3025,7 +3078,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd05ddf9",
+   "id": "4e6b6fd5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3033,7 +3086,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e16ea65d",
+   "id": "60997050",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3041,7 +3094,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f5b2ff0",
+   "id": "5aa37735",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3049,7 +3102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7c3fe99",
+   "id": "db715560",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3057,7 +3110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cb5d018",
+   "id": "e2d349e6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3065,7 +3118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50c1f0af",
+   "id": "e2cb4f61",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3073,23 +3126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e0707c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f7db3612",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "533841cf",
+   "id": "f92fd718",
    "metadata": {},
    "outputs": [],
    "source": []
